Implement PATCH device for zone_uuid.
